[project]
name = "ha-minimqtt"
version = "0.0.1"
authors = [
    { name="E.A. Graham, Jr.", email="https://github.com/EAGrahamJr/ha-minimqtt/discussions" },
]
description = "Home-Assistant MQTT client and devices for CircuitPython"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: CircuitPython",
]

[project.urls]
Homepage = "https://github.com/EAGrahamJr/ha-minimqtt"
Issues = "https://github.com/EAGrahamJr/ha-minimqtt/issues"
